[package]
name = "matrix-rain"
version = "0.1.0"
authors = ["0xSooki <0xSooki@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
yew = { version = "0.20.0", features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
yew-hooks = "0.2.0"
use = "0.0.0"
web-sys = "0.3.64"
gloo-timers = "0.3.0"
